2003-03-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* buildscripts/mf-to-table.py (write_fontlist): use new markup syntax

	* python/lilylib.py (make_page_images): add function.

	* scripts/ly2dvi.py (run_latex): include title in preview image.

	* scripts/lilypond-book.py (process_ly2dvi_blocks): call ly2dvi
	from lilypond-book for <ly2dvifile> tags in HTML.

	* scripts/ly2dvi.py (option_definitions): add --debug option to
	print out environment.

	* input/regression/tie-chord-partial.ly: new file.

2003-03-05  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond.words: add 3

2003-03-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/new-markup.scm (markup-function-list): add finger-markup

	* input/tutorial/brahms-tweaked.ly: new markup 

	* scm/bass-figure.scm (brew-one-figure): bugfix for large bass figures 

	* scm/new-markup.scm (brew-new-markup-molecule): robustness: don't
	crash when processing '() markup

	* input/regression/breathing-sign.ly (texidoc): add caesura example.

	* lily/breathing-sign.cc (railtracks): another caesura.

	* mf/feta-schrift.mf: caesura symbol. 

2003-03-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/convert-ly.py (FatalConversionError.conv): add
	ly:molecule-XXX conversions.

	* lily/molecule-scheme.cc: change names to ly:molecule-XXX

	* input/regression/multi-measure-rest-text.ly: new file.

	* scm/music-functions.scm (glue-mm-rest-texts): automatically
	convert MMREST-TEXT to MultiMeasureRestNumber settings.

	* ly/engraver-init.ly (ScoreContext): move tablature settings to
	ScoreContext

	* scm/new-markup.scm (center-markup): \center markup.

	* scm/music-functions.scm: remove pitchify scripts.

	* lily/music.cc (print_smob): display music name if available 

2003-03-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/refman.itely (Instrument names): remove
	\turnOff doco.

2003-03-01  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/score.cc (mark_smob): bugfix.

	* input/regression/rehearsal-mark.ly: new file.
